# my-first-blog

./: .gitignore  README.md  pyproject.toml  requirements.txt
blog/: forms.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_created_date_post_created_at_and_more.py
blog/static/css/: blog.css
blog/templates/blog/: post_list.html
mysite/: settings.py
src/my_first_blog/: __init__.py
