[project]
name = "my-first-blog"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "django~=4.2.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_first_blog"]
